testsuite/tests/dependent/should_fail/T15380.stderr

T15380.hs:18:16: error:
    • Expecting one more argument to ‘To (M x)’
      Expected a type, but ‘To (M x)’ has kind ‘Rep (M x) -> M x’
    • In the type ‘To (M x)’
      In the type family declaration for ‘MDefault’
